--- a/DiscordBot.csproj
+++ b/DiscordBot.csproj
@@ -5,10 +5,16 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>DiscordBot_tutorial</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="3.10.0" />
+      <PackageReference Include="Quartz" Version="3.6.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Remove="Jobs\JobScheduler.cs" />
     </ItemGroup>
 
 </Project>
