--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,12 @@ obj/
 /packages/
 riderModule.iml
 /_ReSharper.Caches/
+.idea/.idea.DiscordBot_tutorial/.idea/workspace.xml
+.idea/.idea.DiscordBot/.idea/encodings.xml
+token.txt
+mozna.mp4
+mozna.mp4
+mozna.mp4
+.idea/.idea.DiscordBot/.idea/indexLayout.xml
+.idea
+.DS_Store
