Just playing with codeDom, nothing serious

--- a/DiscordBot.csproj
+++ b/DiscordBot.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
       <PackageReference Include="Discord.Net" Version="3.10.0" />
       <PackageReference Include="Quartz" Version="3.6.2" />
+      <PackageReference Include="System.CodeDom" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
